--- a/public/css/fallways.css
+++ b/public/css/fallways.css
@@ -51,3 +51,12 @@
 	width: 25;
 	position: absolute;
 }
+
+.wall {
+	background-image: url('../imgs/wall.gif');
+	background-size: 32px 32px;
+	background-repeat: no-repeat;
+	height: 32;
+	width: 32;
+	position: absolute;
+}
