--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,18 +6,55 @@
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
   -->
-  <link rel="stylesheet" href="/css/normalize.css">
+  <!-- <link rel="stylesheet" href="/css/normalize.css"> -->
   <!--
     application.css is where you put your styles
   -->
   <link rel="stylesheet" href="/css/application.css">
+  <link rel="stylesheet" href="/css/fallways.css">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/js/application.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="/js/faller.js"></script>
+  <script src="/js/badguys.js"></script>
+  <script src="/js/userweapon.js"></script>
+  <script src="/js/enemyweapon.js"></script>
+  <script src="/js/asteroids.js"></script>
+  <script src="/js/barricades.js"></script>
+  <script src="/js/game.js"></script>
+  <script src="/js/mousetrap.js"></script>
+  <script src="/js/underscore.js"></script>
 
-  <title></title>
+  <title>FallSpace</title>
 </head>
 <body>
+  <div id="sidebar">
+    <% if logged_in? %>
+      <h3> Welcome, <%= @current_user.username %>!</h3>
+    <% else %>
+      <div id="signup">
+        <h1>Sign Up!</h1>
+        <form action="/players/new" method="POST">
+          <label for="username">Username: </label><br>
+          <input type="text" id="username" placeholder="Pick a username..." name="username"><br>
+          <label for="password">Password: </label><br>
+          <input type="password" id="password" placeholder="Pick a password..." name="password_hash"><br>
+          <label for="email">Email: </label><br>
+          <input type="text" id="email" placeholder="What's your email?" name="email"><br>
+          <input type="submit" value="Sign Up">
+        </form>
+      </div>
+      <div id="login">
+        <h1>Login</h1>
+        <form action="/players" method="POST">
+          <label for="username">Username: </label><br>
+          <input type="text" placeholder="Enter username..." name="username"><br>
+          <label for="password">Password: </label><br>
+          <input type="password" id="password" placeholder="Enter password..." name="password_hash"><br>
+          <input type="submit" value="Login">
+        </form>
+      </div>
+    <% end %>
+  </div>
   <%= yield %>
 </body>
 </html>
