--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -29,7 +29,7 @@
 <body>
   <div id="sidebar">
     <% if logged_in? %>
-      <h3> Welcome, <%= @current_user.username %>!</h3>
+      <h3> Welcome, <%= current_player.username %>!</h3>
     <% else %>
       <div id="signup">
         <h1>Sign Up!</h1>
