fixed score keeping

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,8 +3,13 @@
 	<body>
 		<div id="gameboard">
 		</div>
-		<p>Current Score: <span id="timer">0</span></p>
-		<button id='reset' type='button'>Replay</button>
+		<div id="scoreboard">
+			<p>Current Score: <span id="timer">0</span></p>
+			<p>Bad guys killed: <span id="enemyKills">0</span></p>
+			<p>Asteroids destroyed: <span id="asteroidKills">0</span></p>
+			<p>Walls destroyed: <span id="wallKills">0</span></p>
+			<button id='reset' type='button'>Replay</button>
+		</div>
 	</body>
 
 </html>
