--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,9 +12,17 @@
   -->
   <link rel="stylesheet" href="/css/application.css">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/js/application.js"></script>
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="./public/js/faller.js"></script>
+    <script src="./public/js/badguys.js"></script>
+    <script src="./public/js/userweapon.js"></script>
+    <script src="./public/js/enemyweapon.js"></script>
+    <script src="./public/js/asteroids.js"></script>
+    <script src="./public/js/barricades.js"></script>
+    <script src="./public/js/game.js"></script>
+    <script src="./public/js/mousetrap.js"></script>
+    <script src="./public/js/underscore.js"></script>
+    
   <title></title>
 </head>
 <body>
