--- a/app/views/leaderboard.erb
+++ b/app/views/leaderboard.erb
@@ -1,1 +1,23 @@
 <!-- Single-Game Leaderboards for asteroids/badguys/walls destroyed and total score -->
+
+<div id="leaderboard_container">
+
+	<h1>Single Game Leaderboards:</h1>
+	<h3>High Score </h3>
+	<% @ordered_score.each_with_index do |player, i| %>
+		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_score %></p>
+	<% end %>
+	<h3>Enemies Killed </h3>
+	<% @ordered_enemies.each_with_index do |player, i| %>
+		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_badguys %></p>
+	<% end %>
+	<h3>Asteroids Destroyed </h3>
+	<% @ordered_asteroids.each_with_index do |player, i| %>
+		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_asteroids %></p>
+	<% end %>
+	<h3>Walls Destroyed </h3>
+	<% @ordered_walls.each_with_index do |player, i| %>
+		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_walls %></p>
+	<% end %>
+
+</div>
