--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -1,5 +1,6 @@
 <div class="profile_container">
 	<h1><%= @player.username %></h1>
+	<img src=<%= @player.gravatar%>/>
 	<h3>Single Game High Scores:</h3>
 	<ul>
 		<li>Enemies Killed: <%= @player.high_badguys %></li>
