--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -1,13 +1,12 @@
 <div class="profile_container">
-	<h1><%= @player.username %></h1>
-	<img src=<%= @player.gravatar%>/>
-	<h3>Single Game High Scores:</h3>
+	<h1><%= @player.username %>'s Profile</h1>
+	<h3>FallSpace Single Game High Scores:</h3>
 	<ul>
 		<li>Enemies Killed: <%= @player.high_badguys %></li>
 		<li>Asteroids Destroyed: <%= @player.high_asteroids %></li>
 		<li>Walls Destroyed: <%= @player.high_walls %></li>
 	</ul>
-	<h3>Total Destruction:</h3>
+	<h3>FallSpace Total Destruction:</h3>
 	<ul>
 		<li>Total Enemies Killed: <%= @player.total_badguys %></li>
 		<li>Total Asteroids Destroyed: <%= @player.total_asteroids %></li>
