--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,8 +1,18 @@
 #sidebar {
 	width: 15%;
-	height: 100%;
+	height: 600px;
 	display: inline-block;
 	float: right;
+	background-color: black;
+	border: 1px black solid;
+	text-align: center;
+}
+
+.scoreboard {}
+
+.avatar {
+	border-radius: 100%;
+	border: 2px red solid;
 }
 
 #game_container {
@@ -19,7 +29,20 @@
 	background-repeat: no-repeat;*/
 }
 
-#startshell {
+.sidebar-head {
+	color:white;
+}
+
+a {
+	color:white;
+	text-decoration: none;
+}
+
+a:hover {
+	color:red;
+}
+
+/*#startshell {
 	height: 600px;
 	width: 800px;
 	border: black 2px solid;
@@ -27,7 +50,7 @@
 	background-size: 1024px 600px;
 	background-repeat: no-repeat;
 	opacity: .75;
-}
+}*/
 
 #start {
 	border: black 1px solid;
