reformatted start button and fallspace game page layout

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,15 +1,4 @@
-<html>
-
-	<body>
-		<div id="gameboard">
-		</div>
-		<div id="scoreboard">
-			<p>Current Score: <span id="timer">0</span></p>
-			<p>Bad guys killed: <span id="enemyKills">0</span></p>
-			<p>Asteroids destroyed: <span id="asteroidKills">0</span></p>
-			<p>Walls destroyed: <span id="wallKills">0</span></p>
-			<div id='start'>Start</div>
-		</div>
-	</body>
-
-</html>
+<div class="game_container">
+	<div id="gameboard">
+	</div>
+</div>
