--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -33,13 +33,21 @@
     <% if logged_in? %>
       <h3 class="sidebar-head"> Welcome, <%= @current_player.username %>!</h3>
       <img class="avatar" src="<%= @current_player.gravatar %>"/>
-      <h4> <a href='/'>Play FallSpace</a> </h4>
-      <h4> <a href='/players/<%=@current_player.id%>'>My Profile</a> </h4>
-      <h4> <a href='/leaderboard'>FallSpace Leaderboard</a> </h4>
-      <h4> <a href='/rankings'>FallSpace Rankings</a> </h4>
+      <h4> <a class="sidebar-button" href='/'>Play FallSpace</a> </h4>
+      <h4> <a class="sidebar-button" href='/players/<%=@current_player.id%>'>My Profile</a> </h4>
+      <h4> <a class="sidebar-button" href='/leaderboard'>FallSpace Leaderboard</a> </h4>
+      <h4> <a class="sidebar-button" href='/rankings'>FallSpace Rankings</a> </h4>
       <form action="/logout" method="GET">
         <input type="submit" value="Log Out">
       </form>
+      <div id="scoreboard">
+        <h3>-- Scoreboard --</h3>
+        <p>Current Score: <span id="timer">0</span></p>
+        <p>Bad guys killed: <span id="enemyKills">0</span></p>
+        <p>Asteroids destroyed: <span id="asteroidKills">0</span></p>
+        <p>Walls destroyed: <span id="wallKills">0</span></p>
+        <div id='start'></div>
+      </div>
     <% else %>
       <div id="signup">
         <h1>Sign Up!</h1>
