fixed styling on profile, leaderboard, ranking pages

--- a/app/views/ranking.erb
+++ b/app/views/ranking.erb
@@ -1,6 +1,6 @@
 <!-- All-time Rankings for total asteroid/badguy/walls killed, total score, games played, average score, etc. -->
 
-<div id="ranking_container">
+<div class="ranking_container">
 
 	<h1>FallSpace Player Rankings:</h1>
 	<h3>Most Enemies Killed </h3>
