--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -50,23 +50,23 @@
       </div>
     <% else %>
       <div id="signup">
-        <h1>Sign Up!</h1>
+        <h1 class="sidebar-text">Sign Up</h1>
         <form action="/players/new" method="POST">
-          <label for="username">Username: </label><br>
+          <label class="sidebar-text" for="username">Username: </label><br>
           <input type="text" id="username" placeholder="Pick a username..." name="username"><br>
-          <label for="password">Password: </label><br>
+          <label class="sidebar-text" for="password">Password: </label><br>
           <input type="password" id="password" placeholder="Pick a password..." name="password_hash"><br>
-          <label for="email">Email: </label><br>
+          <label class="sidebar-text" for="email">Email: </label><br>
           <input type="text" id="email" placeholder="What's your email?" name="email"><br>
           <input type="submit" value="Sign Up">
         </form>
       </div>
       <div id="login">
-        <h1>Login</h1>
+        <h1 class="sidebar-text">Login</h1>
         <form action="/players" method="POST">
-          <label for="username">Username: </label><br>
+          <label class="sidebar-text" for="username">Username: </label><br>
           <input type="text" placeholder="Enter username..." name="username"><br>
-          <label for="password">Password: </label><br>
+          <label class="sidebar-text" for="password">Password: </label><br>
           <input type="password" id="password" placeholder="Enter password..." name="password_hash"><br>
           <input type="submit" value="Login">
         </form>
