added buggy stuff

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -46,9 +46,9 @@
             <p>Walls destroyed: <span id="wallKills">0</span></p>
           <% elsif @footballurrito %>
             <h3>-- Scoreboard --</h3>
-            <p>Current Score: <span>0</span></p>
-            <p>Burritos Eaten: <span>0</span></p>
-            <p>Opponents Tackled: <span>0</span></p>
+            <p>Current Score: <span id="footballtimer">0</span></p>
+            <p>Burritos Eaten: <span id="burritosEaten">0</span></p>
+            <p>Opponents Tackled: <span id="opponentsTackled">0</span></p>
           <% end %>
           <div id='start'></div>
         </div>
