fixed high score pages

--- a/app/views/ranking.erb
+++ b/app/views/ranking.erb
@@ -4,16 +4,26 @@
 
 	<h1>FallSpace Player Rankings:</h1>
 	<h3>Most Enemies Killed </h3>
-	<% @ordered_total_enemies.each_with_index do |player, i| %>
+	<% @fallspace_ordered_total_enemies.each_with_index do |player, i| %>
 		<p><%= i+1 %>. <%= player.username%> -- <%= player.total_badguys %></p>
 	<% end %>
 	<h3>Most Asteroids Destroyed </h3>
-	<% @ordered_total_asteroids.each_with_index do |player, i| %>
+	<% @fallspace_ordered_total_asteroids.each_with_index do |player, i| %>
 		<p><%= i+1 %>. <%= player.username%> -- <%= player.total_asteroids %></p>
 	<% end %>
 	<h3>Most Walls Destroyed </h3>
-	<% @ordered_total_walls.each_with_index do |player, i| %>
+	<% @fallspace_ordered_total_walls.each_with_index do |player, i| %>
 		<p><%= i+1 %>. <%= player.username%> -- <%= player.total_walls %></p>
+	<% end %>
+
+	<h1>Footballurrito Player Rankings:</h1>
+	<h3>Most Enemies Killed </h3>
+	<% @footballurrito_ordered_total_burritos.each_with_index do |player, i| %>
+		<p><%= i+1 %>. <%= player.username%> -- <%= player.total_burritos %></p>
+	<% end %>
+	<h3>Most Asteroids Destroyed </h3>
+	<% @footballurrito_ordered_total_opponents.each_with_index do |player, i| %>
+		<p><%= i+1 %>. <%= player.username%> -- <%= player.total_opponents %></p>
 	<% end %>
 
 </div>
