--- a/app/views/leaderboard.erb
+++ b/app/views/leaderboard.erb
@@ -4,20 +4,34 @@
 
 	<h1>FallSpace Single Game Leaderboards:</h1>
 	<h3>High Score </h3>
-	<% @ordered_score.each_with_index do |player, i| %>
-		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_score %></p>
+	<% @fallspace_ordered_score.each_with_index do |player, i| %>
+		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_fallspace_score %></p>
 	<% end %>
 	<h3>Enemies Killed </h3>
-	<% @ordered_enemies.each_with_index do |player, i| %>
+	<% @fallspace_ordered_enemies.each_with_index do |player, i| %>
 		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_badguys %></p>
 	<% end %>
 	<h3>Asteroids Destroyed </h3>
-	<% @ordered_asteroids.each_with_index do |player, i| %>
+	<% @fallspace_ordered_asteroids.each_with_index do |player, i| %>
 		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_asteroids %></p>
 	<% end %>
 	<h3>Walls Destroyed </h3>
-	<% @ordered_walls.each_with_index do |player, i| %>
+	<% @fallspace_ordered_walls.each_with_index do |player, i| %>
 		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_walls %></p>
+	<% end %>
+
+	<h1>Footballurrito Single Game Leaderboards:</h1>
+	<h3>High Score </h3>
+	<% @footballurrito_ordered_score.each_with_index do |player, i| %>
+		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_footballurrito_score %></p>
+	<% end %>
+	<h3>Burritos Eaten </h3>
+	<% @footballurrito_ordered_burritos.each_with_index do |player, i| %>
+		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_burritos %></p>
+	<% end %>
+	<h3>Opponents Tackled</h3>
+	<% @footballurrito_ordered_opponents.each_with_index do |player, i| %>
+		<p><%= i+1 %>. <%= player.username%> -- <%= player.high_opponents %></p>
 	<% end %>
 
 </div>
