--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,8 +31,8 @@
       <h4> <a class="sidebar-button" href='/fallspace'>Play FallSpace</a> </h4>
       <h4> <a class="sidebar-button" href='/footballurrito'>Play Footballurrito</a> </h4>
       <h4> <a class="sidebar-button" href='/players/<%=@current_player.id%>'>My Profile</a> </h4>
-      <h4> <a class="sidebar-button" href='/leaderboard'>FallSpace Leaderboard</a> </h4>
-      <h4> <a class="sidebar-button" href='/rankings'>FallSpace Rankings</a> </h4>
+      <h4> <a class="sidebar-button" href='/leaderboard'>Leaderboard</a> </h4>
+      <h4> <a class="sidebar-button" href='/rankings'>Rankings</a> </h4>
       <form action="/logout" method="GET">
         <input type="submit" value="Log Out">
       </form>
